--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,14 @@ services:
         build:
             context: ./app
         ports:
-            - "3000:3000"
+            - "3000"
     nginx:
         restart: always
         build:
             context: ./nginx
         ports:
             - "80:80"
+networks:
+  default:
+    driver: bridge
+    name: aspen 
