Setup CDK project

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-
+# Node/Express
 node_modules/
-
 .env
+
+# Python
+.venv
+venv/
+
+# CDK
+*.swp
+package-lock.json
+__pycache__
+.pytest_cache
+.venv
+*.egg-info
+
+# CDK asset staging directory
+.cdk.staging
+cdk.out
+
+# IDE
+.idea
