--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,5 +6,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
 
         proxy_pass http://app:3000;
+        # proxy_pass http://localhost:3000;
+        # proxy_pass http://54.185.252.105:3000;
     }
 }
