--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3.8"
 services:
     app:
-        build:
-            context: ./app
+        image:
+           jaimelanders/aspen-app
         ports:
           - "3000"
     nginx:
         restart: always
-        build:
-            context: ./nginx
+        image:
+           jaimelanders/aspen-nginx
         ports:
             - "80:80"
 networks:
