Add code comments and pydocs

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
+# default gitignore for the project repo
 # Node/Express
 node_modules/
 .env
+
+# NGINX
+certs/
+*.crt
+*.key
 
 # Python
 .venv
@@ -20,8 +26,3 @@ cdk.out
 
 # IDE
 .idea
-
-# NGINX
-certs/
-*.crt
-*.key
