--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# docker compose configuration for building and deploying the app, nginx instances and the network
 version: "3.8"
 services:
     app:
