--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,6 @@
+# default configuration for nginx reverse proxy for http and https
+
+# config for https proxy
 server {
     listen 443 ssl;
     server_name  www.yoursite.com;
@@ -14,6 +17,7 @@ server {
     }
 }
 
+# config for http proxy
 server {
     listen 80; 
 
