Containerize cdk app

--- a/cdk/.env-example
+++ b/cdk/.env-example
@@ -1,3 +1,11 @@
+# AWS Account ID 
+ACCOUNT=123456789012
+
+# Region to deploy to
 REGION=us-west-2
+
+# SSH key pair to use, if empty then none will be used and ssh will not be set up
 KEY=
+
+# IP4 to whitelist in subnets. Default is all hosts allowed but a specific IP is recommended
 IP4=0.0.0.0/0
