--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,4 +16,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build and deploy the app Docker image
       working-directory: ./app
-      run: ./app/buildimage.sh
+      run: ./buildimage.sh
