Remove certs dir after build

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -55,3 +55,4 @@ jobs:
     - name: Build and deploy the nginx Docker image
       working-directory: ./nginx
       run: ./buildimage.sh
+      run: rm -rf ./certs 
