--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -54,5 +54,6 @@ jobs:
 
     - name: Build and deploy the nginx Docker image
       working-directory: ./nginx
-      run: ./buildimage.sh
-      run: rm -rf ./certs 
+      run: |
+        ./buildimage.sh
+        rm -rf ./certs 
